k8s/networkpolicy/frontend/default-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: frontend   
spec:
  podSelector: {}      
  policyTypes:
    - Ingress
    - Egress
